--- a/public/css/app.css
+++ b/public/css/app.css
@@ -44,11 +44,7 @@ a {
     color: white;
 }
 
-ul.nav a {
-    font-size: 0.87rem;
-}
-
-ul.nav a:hover {
+.sidebar ul.nav a:hover {
     transition: all 300ms ease !important;
     color: var(--color-info-dark) !important;
     padding-left: 2rem;
@@ -65,6 +61,30 @@ ul.nav a:hover {
     border: none;
     box-shadow: var(--box-shadow) !important;
     border-radius: var(--border-radius-1);
+}
+
+ul.nav a,
+label,
+thead th,
+tbody td,
+.form-control,
+.btn b,
+.select2-selection__rendered,
+.select2-results__option {
+    font-size: 0.87rem !important;
+}
+
+.select2-selection__rendered,
+.select2-selection--multiple {
+    padding-left: 0.75rem;
+    padding-top: 0.10rem;
+}
+
+.breadcrumb-item a {
+    color: var(--color-primary);
+}
+.breadcrumb-item a:hover {
+    color: var(--color-dark);
 }
 
 .btn-primary,
